--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy React App to VPS
 
 on:
   push:
-    branches: [main] # или master, если используешь другую ветку
+    branches: [main]
 
 jobs:
   build-and-deploy:
@@ -24,5 +24,9 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
-        source: "build/*"
+        source: "build/**"
         target: "/var/www/Shirma"
+        strip_components: 1
+        rm: true
+        overwrite: true
+        timeout: 60s
