--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,14 @@ jobs:
     - name: Build project
       run: npm run build
 
+      - name: Test SSH connection
+      run: |
+        echo "$SSH_KEY" > key.pem
+        chmod 600 key.pem
+        ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "echo ✅ Connected to server!"
+      env:
+        SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
+
     - name: Deploy via SCP
       uses: appleboy/scp-action@v0.1.4
       with:
