--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,8 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
-        source: "build/**"
+        source: "build"
         target: "/var/www/Shirma"
         strip_components: 1
         rm: true
         overwrite: true
-        timeout: 60s
