--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Build project
       run: npm run build
 
+    - name: List build directory
+      run: ls -la build
+
     - name: Debug SSH Key content (safe)
       run: echo "$SSH_KEY" | head -n 5
       env:
