--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       run: npm run build
 
     - name: List build directory
-      run: ls -la build
+      run: ls -la dist
 
     - name: Debug SSH Key content (safe)
       run: echo "$SSH_KEY" | head -n 5
@@ -40,7 +40,7 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
-        source: "build"
+        source: "dist"
         target: "/var/www/Shirma"
         strip_components: 1
         rm: true
