--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@uidotdev/usehooks": "^2.4.1",
     "classnames": "^2.5.1",
+    "dotenv": "^16.5.0",
     "expr-eval": "^2.0.2",
+    "firebase": "^11.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
